# reference-system-paam

./: README.md  env.sh  roudi-tuned.toml  roudi.toml
AAMF/src/aamf_server/: CMakeLists.txt  CMakeListsx86.txt  package.xml
AAMF/src/aamf_server/include/: admissions.h  gpu_operations.h  logging.h  tpu.h
AAMF/src/aamf_server/src/: aamf_server.cpp  admissions.cpp  gpu_operations.cu  logging.cpp  tpu.cpp
AAMF/src/aamf_server_interfaces/: CMakeLists.txt  package.xml
AAMF/src/aamf_server_interfaces/action/: GPUrequest.action
AAMF/src/aamf_server_interfaces/msg/: Admissions.msg  CallbackRow.msg  GPURegister.msg  GPURequest.msg
AAMF/src/wcet_aamf_preempt/include/: case_study.h
AAMF/src/wcet_aamf_preempt/src/: case_study.cpp
Admissions Control/: .gitignore  Makefile  admissions.cpp  admissions.h
PAAM/include/: aamf_structs.h  paam_structs.h
PAAM/src/paam_server/: CMakeLists.txt  CMakeListsx86.txt  calibration_camera.yml  package.xml
PAAM/src/paam_server/include/: admissions.h  gpu_operations.h  logging.h
PAAM/src/paam_server/src/: admissions.cpp  gpu_operations.cu  logging.cpp  paam_server.cpp
PAAM/src/paam_server_interfaces/: CMakeLists.txt  package.xml
PAAM/src/paam_server_interfaces/msg/: Admissions.msg  AdmissionsResponse.msg  CallbackRow.msg  GPURegister.msg
PAAM/src/wcet_paam_preempt/: CMakeLists.txt  package.xml
PAAM/src/wcet_paam_preempt/include/: case_study.h
PAAM/src/wcet_paam_preempt/src/: case_study.cpp
autoware_reference_system/: CMakeLists.txt  README.md  package.xml
autoware_reference_system/include/autoware_reference_system/: autoware_system_builder.hpp
autoware_reference_system/include/autoware_reference_system/system/priority/: default.hpp
autoware_reference_system/src/ros2/executor/: autoware_default_multithreaded.cpp  autoware_default_multithreaded_picas.cpp  autoware_default_singlethreaded.cpp  autoware_default_singlethreaded_multi_executors.cpp  autoware_default_singlethreaded_picas_multi_executors.cpp  autoware_default_singlethreaded_picas_single_executor.cpp  autoware_default_staticsinglethreaded.cpp
rclcpp/src/rclcpp/: executor.cpp
reference_system/: CMakeLists.txt  package.xml
reference_system/include/reference_system/: aamf_structs.h  aamf_wrappers.hpp  edgetpu.h  gpu_operations.cu  gpu_operations.hpp  msg_types.hpp  paam_structs.h  paam_wrappers.hpp
reference_system/include/reference_system/nodes/: settings.hpp
reference_system/include/reference_system/nodes/rclcpp/: command.hpp  cyclic.hpp  fusion.hpp  intersection.hpp  sensor.hpp  transform.hpp
reference_system/include/reference_system/system/type/: rclcpp_system.hpp
scripts/: run_case_study_2.sh  run_server.sh
