<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>aamf_server</name>
  <version>0.1.0</version>
  <description>GPU scheduling server</description>
  <license>Apache License 2.0</license>
  <author email="denri006@ucr.edu">Daniel Enright</author>
  <maintainer email="denri006@ucr.edu">RTEN Lab</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>aamf_server_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>cuda</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>